--- a/index.html
+++ b/index.html
@@ -6,12 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>KAT</title>
-    <link href="style.css" rel="stylesheet">
+    <link type="text/css" href="style.css" rel="stylesheet">
     <script src="main.js" defer></script>
-</head>
-vbhdfjbejn
 
-<body>
+</head>
+
+<body class>
+    <header>
+        <div class="main">
+            <div class="logo">
+                <img src="katlogo.jpg">
+            </div>
+            <u1>
+                <li><a href='#'>Home</a></li>
+                <li><a href='#'>Men</a></li>
+                <li><a href='#'>Women</a></li>
+                <li><a href='#'>Watches</a></li>
+                <li><a href='#'>Colections</a></li>
+                <li><a href='#'>Home</a></li>
+            </u1>
+        </div>
+    </header>
+
 
 </body>
 
